@startuml Class
interface App {
    + start(args: String[])
}

class AppImpl {
    - argumentProcessor: ArgumentProcessor
    + {static} main(args: String[])
}

interface Configuration {
    + load(args: String[]): void
    + getValue(key: String): String
    + getValueAsInt(key: String): int
    + validate(): boolean
}

class ConfigurationImpl {
    - appSettings: HashMap<String, String>
    - getParameterValueFromArguments(args: String[], key: String): String
}

interface ArgumentProcessor {
    + process(args: String[])
}

class ArgumentProcessorImpl {
    - configuration: Configuration
    - passwordGenerator: PasswordGenerator
    - terminal: Terminal
}

interface Terminal {
    + show(message: String)
}

class TerminalImpl {
}

interface PasswordGenerator {
    + generate(): String
}

class PasswordGeneratorImpl {
    - configuration: Configuration
    - randomCharacterGenerator: RandomCharacterGenerator
    - stringShuffler: StringShuffler
}

interface RandomCharacterGenerator {
    + generateUppercaseCharacter(): char
    + generateLowercaseCharacter(): char
    + generateDigitCharacter(): char
    + generateSpecialCharacter(): char
    + generateAllowedCharacter(): char
}

class RandomCharacterGeneratorImpl {
    - uppercaseCharacters: String
    - lowercaseCharacters: String
    - digitCharacters: String
    - specialCharacters: String
    - allowedCharacters: String
    - random: Random
}

interface StringShuffler {
    + shuffle(characters: String): String
}

class StringShufflerImpl {
}

Configuration <|-- ConfigurationImpl
ArgumentProcessor <|-- ArgumentProcessorImpl
Terminal <|-- TerminalImpl
PasswordGenerator <|-- PasswordGeneratorImpl
RandomCharacterGenerator <|-- RandomCharacterGeneratorImpl
StringShuffler <|-- StringShufflerImpl
App <|-- AppImpl

AppImpl *--l ArgumentProcessor

ArgumentProcessorImpl *--d PasswordGenerator
ArgumentProcessorImpl *--r Terminal

PasswordGeneratorImpl *--l RandomCharacterGenerator
PasswordGeneratorImpl *--r StringShuffler

PasswordGeneratorImpl *--d Configuration
ArgumentProcessorImpl *--l Configuration
@enduml